--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>VooDoo - TestWork</title>
     <link rel="stylesheet" href="./src/css/output.css">
 </head>
-<body class=" bg-main">
+<body class="conteiner bg-main">
     <header class="border-b-2 border-black">
         <div class="flex conteiner mx-auto justify-between p-[24px] h-[98px] mw-[1330px] xl:h-[194px] xl:p-[48px]  " >
 
@@ -33,8 +33,8 @@
     <main class="mt-[100px] ">
         <div class="conteiner mx-auto p-[24px] mw-[1330px]" >
             <ul class="flex gap-6 flex-wrap justify-center" id="cards">
-            <li class="mb-[48px]">
-                <div class="relative block h-[300px] w-[342px] border-2 border-black rounded xl:w-[300px]">
+            <li class="mb-[48px] w-[342px] xl:w-[300px]" >
+                <div class="relative block h-[300px] w-[342px] border-2 border-black rounded overflow-hidden xl:w-[300px]">
                     <img src="" alt="">
                     <span class="absolute top-3 left-3 bg-black rounded text-white px-[8px] py-[2px] uppercase text-sm">used</span>
                 </div>
@@ -57,18 +57,49 @@
             </ul>  
         </div>
 
-        <ul class="flex w-[333px] h-[39px] my-[40px] gap-[10px] mx-auto">
-            <li class="flex items-center justify-center text-lg font-extralight w-[33px] h-[33px] rounded-full border border-black    bg-black text-white ">
-                1
-            </li>
-            <li class="flex items-center justify-center text-lg font-extralight w-[33px] h-[33px] rounded-full border border-black">
-                2
-            </li>
-            <li class="flex items-end justify-center text-lg font-extralight w-[33px] h-[33px] rounded-full border border-black">
-                ...
+        <ul class="flex w-[333px] h-[39px] my-[40px] gap-[10px] mx-auto" id="pagination">
+            <li class="flex items-center justify-center text-lg font-extralight w-[33px] h-[33px] rounded-full border border-black cursor-pointer     bg-black text-white ">
+                <span>
+                    1
+                </span>
             </li>
         </ul>
-    </main>
+    </main> 
+    <footer></footer>
+
+    <div class="absolute top-0 right-0 min-h-full w-[445px] px-[30px] py-[50px] bg-black text-main"  id="modal">
+        <div class="flex justify-between border-b border-main pb-5" >
+            <h3 class="font-bold text-xl">Shopping Cart</h3>
+            <img src="./src/img/close-line.svg" alt="close button">
+        </div>
+
+        <ul class="mt-[50px] flex flex-col gap-[40px] border-b border-main pb-5">
+            <li class="flex gap-[18px] justify-between ">
+                <img  class="block rounded border-white w-[74px] h-[74px]" alt="">
+
+                <div class="space-y-1 flex-1 font-bold text-sm">
+                    <p>Product name</p>
+                    <p>1 000 KR.</p>
+
+                    <div>
+                        <span class="cursor-pointer">-</span>
+                        <span>1</span>
+                        <span class="cursor-pointer">+</span>
+                    </div>
+                </div>
+                <img  class="block w-[24px] h-[24px] cursor-pointer" src="./src/img/delete-bin-6-line.svg" alt="delete tovar">
+            </li>
+        </ul>
+
+        <div class="flex justify-between mt-[35px] font-bold text-sm">
+            <strong>
+                TOTAL
+            </strong>
+            <span>
+                5000 KR.
+            </span>
+        </div>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js"></script>
     <script type="module" src="./index.js"></script>
