--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </main> 
     <footer></footer>
 
-    <div class="absolute top-0 right-0 min-h-full w-[445px] px-[30px] py-[50px] bg-black text-main overflow-scroll hidden"  id="basketModal">
+    <div class="absolute top-0 right-0 min-h-full  px-[30px] py-[50px] bg-black text-main w-full tb:w-[445px] overflow-y-scroll hidden "  id="basketModal">
         <div class="flex justify-between border-b border-main pb-5" >
             <h3 class="font-bold text-xl">Shopping Cart</h3>
             <img class="cursor-pointer" id="basketModalClose" src="./src/img/close-line.svg" alt="close button">
