--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main class="mt-[100px] ">
         <div class="conteiner mx-auto p-[24px] mw-[1330px]" >
             <ul class="flex gap-6 flex-wrap justify-center" id="cards">
-            <li class="mb-[48px] w-[342px] xl:w-[300px]" >
+            <!-- <li class="mb-[48px] w-[342px] xl:w-[300px]" >
                 <div class="relative block h-[300px] w-[342px] border-2 border-black rounded overflow-hidden xl:w-[300px]">
                     <img src="" alt="">
                     <span class="absolute top-3 left-3 bg-black rounded text-white px-[8px] py-[2px] uppercase text-sm">used</span>
@@ -53,16 +53,16 @@
                 <button class=" bg-black rounded text-white w-full h-[42px] cursor-pointer">
                     ADD TO CART
                 </button>
-            </li>
+            </li> -->
             </ul>  
         </div>
 
         <ul class="flex w-[333px] h-[39px] mt-[40px] mb-[196px] gap-[10px] mx-auto" id="pagination">
-            <li class="flex items-center justify-center text-lg font-extralight w-[33px] h-[33px] rounded-full border border-black cursor-pointer bg-black text-white">
+            <!-- <li class="flex items-center justify-center text-lg font-extralight w-[33px] h-[33px] rounded-full border border-black cursor-pointer bg-black text-white">
                 <span>
                     2
                 </span>
-            </li>`
+            </li> -->
         </ul>
     </main> 
 
